--- a/P3/index.html
+++ b/P3/index.html
@@ -32,8 +32,8 @@
 </head>
 <body>
   <div id="startScreen">
-    <h1>Tripulacion Tuplar</h1>
-    <p>Bienvenido a la tripulación tuplar. Ha sido seleccionado para una misión</p>
+    <h1>Tripulacion Tulpar</h1>
+    <p>Bienvenido a la tripulación Tulpar. Ha sido seleccionado para una misión</p>
     <p>Debes eliminar a todos los enemigos de Pony express antes de que te eiliminen a ti, sino Swansea se enfadará mucho contigo</p>
     <p>Es muy simple, muevete de derecha a izquierda con las flechas del teclado y pulsa espacio para disparar</p>
     <p>Buena suerte Curly, siempre al servicio de Pony Express</p>
