definimos las dimensiones

--- a/P4/index.html
+++ b/P4/index.html
@@ -16,3 +16,12 @@
         <button id="modo-andrea">Andrea (Pájaros)</button>
         <button id="modo-lola">Lola (Mitología)</button>
     </div>
+
+    <!-- Dificultad -->
+<div class="elecciones">
+    <p>Elige la dificultad:</p>
+    <button class="dificultad" data-grid="2">2x2</button>
+    <button class="dificultad" data-grid="4">4x4</button>
+    <button class="dificultad" data-grid="6">6x6</button>
+</div>
+
