--- a/P4/index.html
+++ b/P4/index.html
@@ -25,3 +25,20 @@
     <button class="dificultad" data-grid="6">6x6</button>
 </div>
 
+ <!-- Juego -->
+ <div class="game">
+    <div class="controles">
+        <button id="play">Comenzar</button>
+        <button id="replay">Reiniciar</button>
+        <div class="display">
+            <div class="movimientos">0 movimientos</div>
+            <div class="timer">Tiempo: 0 sec</div>
+            <div id="display2">Aciertos: 0</div>
+        </div>
+    </div>
+    <div class="grid-container">
+        <div class="tablero"></div>
+    </div>
+</div>
+</body>
+</html>
