--- a/P4/index.html
+++ b/P4/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Memory Game</title>
-    <link rel="stylesheet" href="memory.css" />
-    <script src="memory.js" defer></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Memory Game</title>
+  <link rel="stylesheet" href="memory 1.css" />
+  <script src="memory 1.js" defer></script>
 </head>
 <body>
-    <h1>Memory Game</h1>
-
-    <!-- Modo de juego -->
-    <div class="elecciones">
-        <p>Elige el modo de juego:</p>
-        <button id="modo-andrea">Andrea (Pájaros)</button>
-        <button id="modo-lola">Lola (Mitología)</button>
-    </div>
-
-    <!-- Dificultad -->
-<div class="elecciones">
+  <h1>Memory Game</h1>
+  <!-- Modo de juego -->
+  <div class="elecciones">
+    <p>Elige el modo de juego:</p>
+    <button id="modo-andrea">Andrea (Pájaros)</button>
+    <button id="modo-lola">Lola (Mitología)</button>
+  </div>
+  <!-- Dificultad -->
+  <div class="elecciones">
     <p>Elige la dificultad:</p>
     <button class="dificultad" data-grid="2">2x2</button>
     <button class="dificultad" data-grid="4">4x4</button>
     <button class="dificultad" data-grid="6">6x6</button>
-</div>
-
- <!-- Juego -->
- <div class="game">
+  </div>
+  <!-- Juego -->
+  <div class="game">
     <div class="controles">
-        <button id="play">Comenzar</button>
-        <button id="replay">Reiniciar</button>
-        <div class="display">
-            <div class="movimientos">0 movimientos</div>
-            <div class="timer">Tiempo: 0 sec</div>
-            <div id="display2">Aciertos: 0</div>
-        </div>
+      <button id="play">Comenzarbutton>
+      <button id="replay">Reiniciar</button>
+      <div class="display">
+        <div class="movimientos">0 movimientos</div>
+        <div class="timer">Tiempo: 0 sec</div>
+        <div id="display2">Aciertos: 0</div>
+      </div>
     </div>
     <div class="grid-container">
-        <div class="tablero"></div>
+      <div class="tablero"></div>
     </div>
-</div>
+  </div>
 </body>
 </html>
+
