--- a/P4/index.html
+++ b/P4/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Memory Game</title>
-  <link rel="stylesheet" href="memory 1.css" />
-  <script src="memory 1.js" defer></script>
+  <link rel="stylesheet" href="memory.css" />
+  <script src="memory.js" defer></script>
 </head>
 <body>
   <h1>Memory Game</h1>
@@ -39,4 +39,6 @@
   </div>
 </body>
 </html>
+
+
 
