--- a/P4/index.html
+++ b/P4/index.html
@@ -8,30 +8,34 @@
   <script src="memory.js" defer></script>
 </head>
 <body>
-  <h1>Memory Game</h1>
-  <!-- Modo de juego -->
-  <div class="elecciones">
-    <p>Elige el modo de juego:</p>
-    <button id="modo-andrea">Andrea (Pájaros)</button>
-    <button id="modo-lola">Lola (Mitología)</button>
-  </div>
-  <!-- Dificultad -->
-  <div class="elecciones">
-    <p>Elige la dificultad:</p>
-    <button class="dificultad" data-grid="2">2x2</button>
-    <button class="dificultad" data-grid="4">4x4</button>
-    <button class="dificultad" data-grid="6">6x6</button>
+  <div class="inicio">
+    <h1>Bienvenido al juego del Memory</h1>
+    <p>Elige un modo de juego y una dificultad</p>
+    <!-- Modo de juego -->
+    <div class="elecciones">
+      <p>Elige el modo de juego:</p>
+      <button id="modo-andrea">Andrea (Pájaros)</button>
+     ="modo-lola">Lola (Mitología)</button>
+    </div>
+    <!-- Dificultad -->
+    <div class="elecciones">
+      <p>Elige la dificultad:</p>
+      <button class="dificultad" data-grid="2">2x2</button>
+      <button class="dificultad" data-grid="4">4x4</button>
+      <button class="dificultad" data-grid="6">6x6</button>
+    </div>
+    <!-- Botones de control -->
+    <div class="controles">
+      <button id="play">Comenzar</button>
+      <button id="replay">Reiniciar</button>
+    </div>
   </div>
   <!-- Juego -->
   <div class="game">
-    <div class="controles">
-      <button id="play">Comenzarbutton>
-      <button id="replay">Reiniciar</button>
-      <div class="display">
-        <div class="movimientos">0 movimientos</div>
-        <div class="timer">Tiempo: 0 sec</div>
-        <div id="display2">Aciertos: 0</div>
-      </div>
+    <div class="display">
+      <div class="movimientos">0 movimientos</div>
+      <div class="timer">Tiempo: 0 sec</div>
+      <div id="display2">Aciertos: 0</div>
     </div>
     <div class="grid-container">
       <div class="tablero"></div>
@@ -39,6 +43,3 @@
   </div>
 </body>
 </html>
-
-
-
