--- a/P4/index.html
+++ b/P4/index.html
@@ -31,7 +31,7 @@
     </div>
   </div>
   <!-- Juego -->
-  <div class="game">
+  <div class="game" style="display: none;"> 
     <div class="display">
       <div class="movimientos">0 movimientos</div>
       <div class="timer">Tiempo: 0 sec</div>
