con sonidos añadidos

--- a/P4/index.html
+++ b/P4/index.html
@@ -47,5 +47,15 @@
     <p>Dedicado a Andrea y Lola, os quiero muchisimo</p>
     <button id="volver-menu">Volver al menú</button>
   </div>
+
+  <!-- Sonido acierto -->
+<audio id="sonido-acierto" src="acierto.mp3" preload="auto"></audio>
+
+<!-- Sonido victoria -->
+<audio id="sonido-victoria" src="victoria.mp3" preload="auto"></audio>
+
+<!-- Música de fondo (loop infinito) -->
+<audio id="musica-fondo" src="fondo.mp3" preload="auto" loop></audio>
+
 </body>
 </html>
