añadido a la pantalla final

--- a/P4/index.html
+++ b/P4/index.html
@@ -45,6 +45,12 @@
     <h2>¡Has ganado! </h2>
     <p>¡Felicidades por encontrar todas las parejas!</p>
     <p>Dedicado a Andrea y Lola, os quiero muchisimo</p>
+    
+    <div id="resumen-final">
+      <p><strong>Intentos:</strong> <span id="final-movimientos">0</span></p>
+      <p><strong>Tiempo:</strong> <span id="final-tiempo">0</span> segundos</p>
+    </div>
+    
     <button id="volver-menu">Volver al menú</button>
   </div>
 
