boton de reinicio

--- a/P4/index.html
+++ b/P4/index.html
@@ -35,6 +35,11 @@
       <div class="timer">Tiempo: 0 sec</div>
       <div id="display2">Aciertos: 0</div>
     </div>
+
+    <div class="controles">
+      <button id="replay">Reiniciar</button>
+    </div>
+    
     <div class="grid-container">
       <div class="tablero"></div>
     </div>
