--- a/P4/index.html
+++ b/P4/index.html
@@ -24,7 +24,6 @@
     </div>
     <div class="controles">
       <button id="play">Comenzar</button>
-      <button id="replay-inicio">Reiniciar</button>
     </div>
   </div>
 
@@ -37,7 +36,7 @@
     </div>
 
     <div class="controles">
-      <button id="replay-juego">Reiniciar</button>
+      <button id="replay">Reiniciar</button>
     </div>
     
     <div class="grid-container">
