--- a/P5/index.html
+++ b/P5/index.html
@@ -12,4 +12,17 @@
     <script src="dijkstra.js" defer></script>
     <script src="red.js" defer></script>
 
-    
+</head>
+<body>
+
+    <div class="controls">
+        <button id="btnCNet">Generar Red</button>
+        <button id="btnMinPath">Calcular Ruta</button>
+        <h4 id="nodos">0 nodos</h4>
+        <h4 id="crono"></h4>
+        <h4 id="estado"></h4>
+    </div>
+
+    <canvas id="networkCanvas" width="800" height="400"></canvas>
+</body>
+</html>
